kubernetes/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucstinternshipadmin
  namespace: ucstinternship
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ucstinternshipadmin
  template:
    metadata:
      labels:
        app: ucstinternshipadmin
    spec:
      containers:
      - name: ucstinternshipadmin
        image: hashonekyaw/ucstinternshipadmin:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ucstinternshipadmin-service
  namespace: ucstinternship
spec:
  selector:
    app: ucstinternshipadmin
  ports:
  - port: 80
    targetPort: 80
